/*
 * Copyright 2024 OceanBase.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package oms;

option java_package = "com.oceanbase.clogproxy.common.packet.protocol";
option java_outer_classname = "V1Proto";

message PbPacket {
    int32 type = 1;             // HeaderType
    int32 compress_type = 2;    // CompressType
    // resevered for other options
    bytes payload = 100;
}

message ClientHandShake {
    int32 log_type = 1;         // LogType
    string client_ip = 2;
    string client_id = 3;
    string client_version = 4;
    bool enable_monitor = 5;
    string configuration = 6;
}

message RuntimeStatus {
    string ip = 1;
    int32 port = 2;

    int32 stream_count = 3;
    int32 worker_count = 4;
}
